--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>cap-jdbc</module>
         <module>cap-property</module>
         <module>cap-bean</module>
+        <module>cap-context</module>
     </modules>
 
     <properties>
@@ -43,13 +44,25 @@
 
             <dependency>
                 <groupId>org.moper.cap</groupId>
+                <artifactId>cap-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.moper.cap</groupId>
                 <artifactId>cap-property</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.moper.cap</groupId>
-                <artifactId>cap-core</artifactId>
+                <artifactId>cap-bean</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.moper.cap</groupId>
+                <artifactId>cap-context</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
