--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>cap-bean</module>
         <module>cap-context</module>
         <module>cap-aop</module>
+        <module>cap-example</module>
     </modules>
 
     <properties>
@@ -63,6 +64,12 @@
             <dependency>
                 <groupId>org.moper.cap</groupId>
                 <artifactId>cap-boot</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.moper.cap</groupId>
+                <artifactId>cap-aop</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
