--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>cap-context</module>
         <module>cap-aop</module>
         <module>cap-example</module>
+        <module>cap-property2</module>
     </modules>
 
     <properties>
