--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>cap-aop</module>
         <module>cap-example</module>
         <module>cap-property2</module>
+        <module>cap-core</module>
     </modules>
 
     <properties>
@@ -41,6 +42,12 @@
         <dependencies>
 
             <!-- ===== cap 模块自身 ===== -->
+
+            <dependency>
+                <groupId>org.moper.cap</groupId>
+                <artifactId>cap-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.moper.cap</groupId>
