重新设计属性系统，旧属性系统归为遗产

--- a/cap-context/pom.xml
+++ b/cap-context/pom.xml
@@ -22,7 +22,7 @@
         <!-- cap-property -->
         <dependency>
             <groupId>org.moper.cap</groupId>
-            <artifactId>cap-property</artifactId>
+            <artifactId>cap-property2</artifactId>
         </dependency>
 
         <!-- 日志 -->
