彻底删除旧版本属性系统，仅保留新版本属性系统

--- a/cap-context/pom.xml
+++ b/cap-context/pom.xml
@@ -22,7 +22,7 @@
         <!-- cap-property -->
         <dependency>
             <groupId>org.moper.cap</groupId>
-            <artifactId>cap-property2</artifactId>
+            <artifactId>cap-property</artifactId>
         </dependency>
 
         <!-- 日志 -->
