--- a/cap-boot/pom.xml
+++ b/cap-boot/pom.xml
@@ -27,7 +27,7 @@
         <!-- cap-property (transitive from cap-context, explicit for clarity) -->
         <dependency>
             <groupId>org.moper.cap</groupId>
-            <artifactId>cap-property2</artifactId>
+            <artifactId>cap-property</artifactId>
         </dependency>
 
         <!-- 日志 -->
