修改项目结构

--- a/cap-boot/pom.xml
+++ b/cap-boot/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>cap-boot</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.moper.cap</groupId>
+            <artifactId>cap-core</artifactId>
+        </dependency>
+
         <!-- context -->
         <dependency>
             <groupId>org.moper.cap</groupId>
