--- a/cap-property/pom.xml
+++ b/cap-property/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>cap-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.moper.cap</groupId>
+            <artifactId>cap-context</artifactId>
+        </dependency>
+
         <!-- 日志 -->
         <dependency>
             <groupId>org.slf4j</groupId>
