--- a/cap-aop/pom.xml
+++ b/cap-aop/pom.xml
@@ -15,6 +15,11 @@
 
         <dependency>
             <groupId>org.moper.cap</groupId>
+            <artifactId>cap-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.moper.cap</groupId>
             <artifactId>cap-context</artifactId>
         </dependency>
 
