--- a/cap-context/pom.xml
+++ b/cap-context/pom.xml
@@ -13,6 +13,11 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>org.moper.cap</groupId>
+            <artifactId>cap-core</artifactId>
+        </dependency>
+
         <!-- cap-bean -->
         <dependency>
             <groupId>org.moper.cap</groupId>
