--- a/cap-boot/pom.xml
+++ b/cap-boot/pom.xml
@@ -15,7 +15,7 @@
         <!-- context -->
         <dependency>
             <groupId>org.moper.cap</groupId>
-            <artifactId>cap-context</artifactId>
+            <artifactId>cap-core</artifactId>
         </dependency>
 
         <!-- cap-bean (transitive from cap-context, explicit for clarity) -->
