--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>cap-boot</module>
-        <module>cap-web</module>
-        <module>cap-data</module>
-        <module>cap-bean</module>
-        <module>cap-context</module>
-        <module>cap-aop</module>
         <module>cap-property</module>
+        <module>cap-bean</module>
+        <module>cap-core</module>
+        <module>cap-boot</module>
+        <module>cap-aop</module>
+        <module>cap-data</module>
+        <module>cap-web</module>
     </modules>
 
     <properties>
@@ -52,7 +52,7 @@
 
             <dependency>
                 <groupId>org.moper.cap</groupId>
-                <artifactId>cap-context</artifactId>
+                <artifactId>cap-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
