cap-bean模块更名为cap-oguri;定义@Capper、@Inject注解来避免Spring歧义

--- a/cap-oguri/pom.xml
+++ b/cap-oguri/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>cap-bean</artifactId>
+    <artifactId>cap-oguri</artifactId>
 
     <dependencies>
         <!-- 日志 -->
