--- a/cap-core/pom.xml
+++ b/cap-core/pom.xml
@@ -15,7 +15,7 @@
         <!-- cap-bean -->
         <dependency>
             <groupId>org.moper.cap</groupId>
-            <artifactId>cap-bean</artifactId>
+            <artifactId>cap-oguri</artifactId>
         </dependency>
 
         <!-- cap-property -->
