--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>cap-property</module>
-        <module>cap-bean</module>
+        <module>cap-oguri</module>
         <module>cap-core</module>
         <module>cap-boot</module>
         <module>cap-aop</module>
@@ -46,7 +46,7 @@
 
             <dependency>
                 <groupId>org.moper.cap</groupId>
-                <artifactId>cap-bean</artifactId>
+                <artifactId>cap-oguri</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
