--- a/cap-boot/pom.xml
+++ b/cap-boot/pom.xml
@@ -11,6 +11,13 @@
 
     <artifactId>cap-boot</artifactId>
 
+    <properties>
+        <classgraph.version>4.8.172</classgraph.version>
+        <jackson.version>2.16.1</jackson.version>
+        <snakeyaml.version>2.2</snakeyaml.version>
+    </properties>
+
+
     <dependencies>
         <!-- context -->
         <dependency>
@@ -22,6 +29,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -37,7 +45,7 @@
             <version>${classgraph.version}</version>
         </dependency>
 
-        <!-- JSON -->
+        <!-- Jackson 核心 -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -62,6 +70,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
