--- a/cap-boot/pom.xml
+++ b/cap-boot/pom.xml
@@ -14,7 +14,6 @@
     <properties>
         <classgraph.version>4.8.172</classgraph.version>
         <jackson.version>2.16.1</jackson.version>
-        <snakeyaml.version>2.2</snakeyaml.version>
     </properties>
 
 
@@ -52,11 +51,10 @@
             <version>${jackson.version}</version>
         </dependency>
 
-        <!-- YAML -->
         <dependency>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-            <version>${snakeyaml.version}</version>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
         <!-- Lombok -->
